# basekit_ros

./: .copier-answers.yml  .gitignore  .syncignore  README.md  basekit_ros.code-workspace  main.py  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
basekit/: package.xml  requirements-dev.txt  setup.cfg  setup.py
basekit/basekit/: camera.py  simulator.py  ui.py
basekit/launch/: basekit.launch.py
basekit_driver/: package.xml  setup.cfg  setup.py
basekit_driver/basekit_driver/: basekit_driver_node.py
basekit_driver/basekit_driver/communication/: serial_communication.py
basekit_driver/basekit_driver/logger/: ros_logger.py
basekit_driver/basekit_driver/modules/: bms_handler.py  bumper_handler.py  configuration_handler.py  estop_handler.py  odom_handler.py  twist_handler.py  yaxis_handler.py  zaxis_handler.py
basekit_driver/test/: test_stdout_logger.py
basekit_launch/: CMakeLists.txt  package.xml
basekit_launch/config/: basekit.liz  basekit.yaml  baskekit.liz  camera.yaml  ff_basic_startup.liz  field_friend.yaml  startup.liz  u6.yaml
basekit_launch/launch/: axis_cameras.launch.py  basekit.launch.py  basekit_driver.launch.py  camera.launch.py  camera_system.launch.py  field_friend.launch.py  gnss.launch.py  rover.launch.py  usb_camera.launch.py
basekit_ui/: CMakeLists.txt  package.xml  setup.py
basekit_ui/launch/: ui.launch.py
basekit_ui/scripts/: ui_node.py
docker/: Dockerfile  bashrc  docker-compose.yml
exampleui/: CMakeLists.txt  package.xml  setup.py
exampleui/launch/: ui.launch.py
exampleui/scripts/: ui_node.py
field_friend_driver/: README.md  package.xml  setup.cfg  setup.py
field_friend_driver/config/: default.yaml  startup.liz
field_friend_driver/field_friend_driver/: field_friend_driver_node.py
field_friend_driver/field_friend_driver/communication/: communication.py  serial_communication.py
field_friend_driver/field_friend_driver/data/: data_odom.py
field_friend_driver/field_friend_driver/modules/: bms_handler.py  configuration_handler.py  estop_handler.py  odom_handler.py  (+3 more)
field_friend_driver/launch/: field_friend_driver.launch.py
field_friend_driver/test/: test_stdout_logger.py
